<resources>
    <string name="app_name">MTCA</string>
    <string name="title_items">Items</string>
    <string name="title_sync">Sync</string>
    <string name="today">Today</string>
    <string name="weekday_mon">Monday</string>
    <string name="weekday_tue">Tuesday</string>
    <string name="weekday_wed">Wednesday</string>
    <string name="weekday_thu">Thursday</string>
    <string name="weekday_fri">Friday</string>
    <string name="weekday_sat">Saturday</string>
    <string name="weekday_sun">Sunday</string>
    <string name="remove_item">Remove item</string>
    <string name="do_task">Do task</string>
    <string name="ok">OK</string>
    <string name="add_new_item">Add new item</string>
    <string name="select_shown_items">Select shown items</string>
    <string name="remove_confirmation">Are you sure you want to remove the item?</string>
    <string name="cancel">Cancel</string>
    <string name="body">Body</string>
    <string name="select_weekday">Select weekday</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="todo">Todo</string>
    <string name="task">Task</string>
    <string name="event">Event</string>
    <string name="select_type">Select type</string>
    <string name="add_new_todo">Add new todo</string>
    <string name="add_new_task">Add new task</string>
    <string name="add_new_event">Add new event</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="todos">Todos</string>
    <string name="tasks">Tasks</string>
    <string name="events">Events</string>
    <string name="none">None</string>
    <string name="server_socket">Socket address:</string>
    <string name="address_hint">127.0.0.1:22</string>
    <string name="server_path">Server path:</string>
    <string name="server_path_hint">/home/user/mtc/</string>
    <string name="username">Username:</string>
    <string name="username_hint">user</string>
    <string name="password">Password</string>
    <string name="sync_failed">Sync failed.</string>
    <string name="sync_successful">Sync successful.</string>
    <string name="password_prompt">Password:</string>
    <string name="syncing">Syncing</string>
    <string name="wait_for_sync">Wait for the sync to finish.</string>
    <string name="event_notification_channel">Event Notification</string>
    <string name="event_notification_channel_desc">A Notification channel for displaying event notifications.</string>
    <string name="time_left">Time left:</string>
    <string name="hours_symbol">h</string>
    <string name="minutes_symbol">min</string>
    <string name="seconds_symbol">s</string>
    <string name="done">Done.</string>
    <string name="timer_already_running">A timer is already running. Running more than one timer is not supported.</string>
    <string name="toggle_pause">Toggle Pause</string>
    <string name="paused">Paused:</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
</resources>